Updated index and styles

--- a/Src/index.html
+++ b/Src/index.html
@@ -17,9 +17,9 @@
         </div>
         <img id="banner" src="banner.jpg " alt="Banner" height="240">
         <h1>
-        About Jovian
+        Welcome to Jovian
       </h1>
-
+      
       <div id="about">
         <div id="description">
           <p style="margin-top: 0px;">
