--- a/Src/index.html
+++ b/Src/index.html
@@ -17,7 +17,7 @@
         </div>
         <img id="banner" src="banner.jpg " alt="Banner" height="240">
         <h1>
-        Welcome to Jovian
+        About Jovian
       </h1>
       
       <div id="about">
@@ -80,7 +80,7 @@
               <td>Full Stack Developer</td>
               <td>Enugu</td>
               <td>Nigeria</td>
-              <td>₦15,000,000</td>
+              <td>₦15q,000,000</td>
               <td>Feb 1,2023</td>   
             </tr>
             <tr class="jobs-data-row">
