--- a/Src/index.html
+++ b/Src/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-         <title>
-            My Second web page 
-         </title>
+         <meta charset="UTF-8">
+         <meta name="viewport" content="width=device-width,initial-scale=1.0">
+         <meta name="descripion" content="learn about job opening at Jovian and submit your application now">
+         <meta name="keywords" content="data science,software developemt,jobs">
+         <meta name="author" content="Jovian">
+         <meta name="robots" content="index,follow">
+         <meta property="og:title" content="Jovian Careers">
+         <meta property="og:description" content="Learn about job opening at Jovian and submit your application now">
+         <meta property="og:image" content="/jovian_meta.png">
+         <meta name="twitter:tittle" content="Jovian Career">
+         <meta name="twitter:description" content="learn about job opening at Jovian and submit your application now">
+         <meta name="twitter:image" content="/jovian_meta.png">
+         <title>Jovian Career</title>
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
